<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.govibs.popularmovie.MovieDetailActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/networkImageViewMoviePoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:contentDescription="@string/movie_title"/>

        <LinearLayout
            android:id="@+id/llRatingContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_toRightOf="@+id/networkImageViewMoviePoster"
            android:layout_toEndOf="@+id/networkImageViewMoviePoster">

            <TextView
                android:id="@+id/tvMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_movie_rating"/>

            <TextView
                android:id="@+id/tvMoviePopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_movie_popularity"/>

            <TextView
                android:id="@+id/tvMovieReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_release_date"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tvMovieOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/networkImageViewMoviePoster"
            android:text="@string/text_overview"
            android:padding="10dp"/>

    </RelativeLayout>



</ScrollView>
